# sthread

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
example/: Makefile  hello-world.c  interleaving-prints.c
include/: sthread.h
src/: sthread.c
src/common/: defaults.c  defaults.h
src/stack/: stack.c  stack.h
src/sthread_create/: sthread_create.c
src/sthread_join/: sthread_join.c
